examples/test/testpolicy3863.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3863
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key16: value45
      key37: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value28
      podSelector:
        matchLabels:
          key21: value47
          key39: value48
          key11: value18
